# proofalpha

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  MANIFEST.in  PUBLIC_EXPORT_MANIFEST.json  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  dashboard.html  dashboard.js  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-core.txt  sitecustomize.py  start_proofalpha_ui_hidden.pyw  ui_server.py
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docker.yml  docs.yml  package.yml  release.yml  security.yml  tests.yml
config/: public_ws_capture.json
docs/: ARCHITECTURE.md  BRAND.md  DEMO.md  OPEN_SOURCE_BOUNDARY.md  PRIVACY.md  QUICKSTART.md  RELEASE_CHECKLIST.md  SECURITY_MODEL.md  index.md
docs/references/: README.md  binance_usdm_api_review.md  mcp_tools_security_review.md  repo_review_PyPortfolioOpt.md  repo_review_Riskfolio-Lib.md  repo_review_TradingAgents.md  repo_review_autoresearch.md  repo_review_binance_connector_python.md  repo_review_binance_futures_connector_python.md  repo_review_ccxt.md  repo_review_hummingbot.md  repo_review_nautilus_trader.md  repo_review_qlib.md  repo_review_questdb.md  repo_review_skfolio.md
docs/runbooks/: cloud_paper_soak.md  extended_paper.md  halt_and_repair.md  local_smoke.md  local_soak.md
examples/: README.md  minimal_builtin_study.json  minimal_campaign.json  study.schema.json
scripts/: check_repository_secrets.py  fetch_and_run.py  install_public_ws_capture_autostart.ps1  public_ws_capture_daemon.ps1  public_ws_capture_manager.ps1  run_numba_parity.py  verify_public_export.py
skills/campaign-orchestrator/: SKILL.md
skills/memory-reviewer/: SKILL.md
src/engine/: __init__.py
src/proofalpha/: __init__.py  runtime.py
tests/: test_runtime_adapter.py
tests/agent/: test_action_schema.py  test_agent_artifacts_module.py  test_composer.py  test_controller.py  test_controller_phase5_cache_module.py  test_forecast_feedback_no_trade_authority.py  test_karpathy_git_module.py  test_karpathy_target_module.py  test_loop_modes.py  test_no_direct_promotion.py  test_registry.py  (+12 more)
(+467 files in other folders)
